--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/cors": "^2.8.12",
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.33",
+    "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.10",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -43,7 +45,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.11.6",
+    "@types/node": "^16.11.7",
     "@types/react-router-dom": "^5.3.2"
   }
 }
