--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/cors": "^2.8.12",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.33",
     "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.10",
