--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.33",
     "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.10",
+    "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
