--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "@types/cors": "^2.8.12",
         "@types/jest": "^26.0.24",
         "@types/lodash": "^4.14.177",
-        "@types/react": "^17.0.33",
+        "@types/prop-types": "^15.7.4",
+        "@types/react": "^17.0.38",
         "@types/react-bootstrap": "^0.32.28",
         "@types/react-dom": "^17.0.10",
         "@types/uuid": "^8.3.3",
