--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
         "@types/react-dom": "^17.0.10",
         "@types/uuid": "^8.3.3",
         "axios": "^0.24.0",
+        "formik": "^2.2.9",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-virtualized": "^9.22.3",
         "typescript": "^4.4.4",
-        "web-vitals": "^1.1.2"
+        "web-vitals": "^1.1.2",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
