--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/react-hooks": "^7.0.2",
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.7",
         "@types/react-router-dom": "^5.3.2",
