--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^12.8.3",
         "@types/cors": "^2.8.12",
         "@types/jest": "^26.0.24",
+        "@types/js-cookie": "^3.0.1",
         "@types/lodash": "^4.14.177",
         "@types/prop-types": "^15.7.4",
         "@types/react": "^17.0.38",
@@ -16,6 +17,7 @@
         "@types/uuid": "^8.3.3",
         "axios": "^0.24.0",
         "formik": "^2.2.9",
+        "js-cookie": "^3.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
