--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@reduxjs/toolkit": "^1.7.2",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
@@ -14,12 +15,14 @@
         "@types/react": "^17.0.38",
         "@types/react-bootstrap": "^0.32.28",
         "@types/react-dom": "^17.0.10",
+        "@types/react-redux": "^7.1.22",
         "@types/uuid": "^8.3.3",
         "axios": "^0.24.0",
         "formik": "^2.2.9",
         "js-cookie": "^3.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-virtualized": "^9.22.3",
