--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@types/react-bootstrap": "^0.32.28",
         "@types/react-dom": "^17.0.10",
         "@types/react-redux": "^7.1.22",
+        "@types/react-table": "^7.7.9",
+        "@types/styled-components": "^5.1.24",
         "@types/uuid": "^8.3.3",
         "axios": "^0.24.0",
         "formik": "^2.2.9",
@@ -25,7 +27,9 @@
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-table": "^7.7.0",
         "react-virtualized": "^9.22.3",
+        "styled-components": "^5.3.3",
         "typescript": "^4.4.4",
         "web-vitals": "^1.1.2",
         "yup": "^0.32.11"
