--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/react-table": "^7.7.9",
         "@types/styled-components": "^5.1.24",
         "@types/uuid": "^8.3.3",
+        "ansi-html": "^0.0.9",
         "axios": "^0.24.0",
         "formik": "^2.2.9",
         "js-cookie": "^3.0.1",
